fix spark, hbase & hadoop version

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -35,6 +35,11 @@
 
   <dependencies>
     <dependency>
+	  <groupId>org.apache.hadoop</groupId>
+	  <artifactId>hadoop-mapreduce-client-core</artifactId>
+	  <version>${hadoop.version}</version>
+	</dependency>
+    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
       <version>${spark.version}</version>
