--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,9 @@
   </distributionManagement>   
 
   <properties>
-    <spark.version>2.3.1-SNAPSHOT</spark.version>
-    <hbase.version>1.1.2</hbase.version>
+    <spark.version>2.2.0</spark.version>
+    <hbase.version>1.2.0-cdh5.8.0</hbase.version>
+    <hadoop.version>2.6.0-cdh5.8.0</hadoop.version>
     <phoenix.version>4.9.0-HBase-1.1</phoenix.version>
     <test_classpath_file>${project.build.directory}/spark-test-classpath.txt</test_classpath_file>
     <java.version>1.7</java.version>
@@ -76,6 +77,16 @@
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
+    </repository>
+    <repository>
+	  <id>cloudera-releases</id>
+	  <url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
+	  <releases>
+	    <enabled>true</enabled>
+	  </releases>
+	  <snapshots>
+        <enabled>false</enabled>
+	  </snapshots>
     </repository>
     <repository>
       <id>apache-repo</id>
